# pydantic-strict-partial

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pydantic_strict_partial.py  pyproject.toml  tests.py
.github/workflows/: ci.yaml  main.yaml  publish.yaml  release.yaml
data/ci/add-publishing/: coverage.xml
data/ci/fix-cd/: coverage.xml
data/ci/fix-publish-to-pypi/: coverage.xml
data/ci/fix-versioning/: coverage.xml
data/ci/remove-poetry-lock/: coverage.xml
data/ci/update-names-and-rules/: coverage.xml
data/codex/migrate-to-uv/: coverage.xml
data/feat/allow-specifying-required-fields/: coverage.xml
data/feat/change-optional-fields-parameter/: coverage.xml
data/feat/initial-release/: coverage.xml
data/fix/fix-mypy/: coverage.xml
data/fix/support-pydantic-2-10-3/: coverage.xml
data/main/: coverage.xml
pydantic_strict_partial/: __init__.py
